--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "vue-project",
   "version": "0.0.0",
-  "private": true,
-  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port 4173",
     "test": "vitest"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@vue/apollo-composable": "^4.0.0-beta.4",
+    "graphql": "^16.6.0",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@graphql-tools/mock": "^8.7.18",
+    "@graphql-tools/schema": "^9.0.16",
+    "@pinia/testing": "^0.0.15",
+    "@rollup/plugin-graphql": "^2.0.3",
     "@testing-library/vue": "^6.6.1",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "happy-dom": "^8.7.1",
-    "vite": "^4.0.0",
-    "vitest": "^0.28.5"
+    "@vitejs/plugin-vue": "^3.0.1",
+    "casual-browserify": "^1.5.19-2",
+    "happy-dom": "^8.9.0",
+    "vitest": "^0.29.2"
   }
 }
